# brasileiro-etl-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notebooks/: load_data.ipynb  transform_data.ipynb
src/: config.py
src/extraction/: scraper.py
src/extraction/utils/: func.py
src/loading/: database_loader.py  load_data.py  queries.py
src/pipelines/: run_pipeline.py
src/transformation/: data_transformer.py  transform_data.py
